--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -4,6 +4,5 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".ChooseGameActivity">
-
-</android.support.constraint.ConstraintLayout>
+    android:background="@drawable/map"
+    tools:context=".ChooseGameActivity"/>
