--- a/app/src/main/res/layout/start_screen.xml
+++ b/app/src/main/res/layout/start_screen.xml
@@ -14,18 +14,19 @@
         <Button
             android:id="@+id/StartGame"
             style="@style/Widget.AppCompat.Button"
-            android:layout_width="wrap_content"
-            android:layout_height="76dp"
+            android:layout_width="80dp"
+            android:layout_height="80dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="8dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="8dp"
-            android:text="@string/StartGame"
+            android:background="@drawable/ic_launcher_foreground"
             app:layout_constraintBottom_toBottomOf="@+id/Setting"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.83"
+            app:layout_constraintHorizontal_bias="0.757"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="@+id/ExitGame" />
+            app:layout_constraintTop_toTopOf="@+id/ExitGame"
+            app:layout_constraintVertical_bias="1.0" />
 
         <Button
             android:id="@+id/Setting"
