--- a/app/src/main/res/layout/startgame.xml
+++ b/app/src/main/res/layout/startgame.xml
@@ -69,12 +69,22 @@
         app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
-        android:id="@+id/test"
+        android:id="@+id/plus"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="140dp"
-        android:layout_marginTop="24dp"
-        android:text="Button"
+        android:layout_marginStart="364dp"
+        android:layout_marginTop="120dp"
+        android:background="@android:drawable/btn_plus"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/minus"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="232dp"
+        android:layout_marginTop="120dp"
+        android:background="@android:drawable/btn_minus"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
