--- a/app/src/main/res/layout/startgame.xml
+++ b/app/src/main/res/layout/startgame.xml
@@ -80,7 +80,8 @@
         android:background="@android:drawable/ic_media_play"
         android:onClick="propertyMove"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent"
+        android:transitionName="BeginButton"/>
 
     <Button
         android:id="@+id/minus"
