--- a/app/src/main/res/layout/startgame.xml
+++ b/app/src/main/res/layout/startgame.xml
@@ -46,17 +46,17 @@
         android:layout_width="80dp"
         android:layout_height="80dp"
         android:layout_marginStart="600dp"
-        android:layout_marginTop="144dp"
+        android:layout_marginTop="164dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/door" />
 
     <ImageView
         android:id="@+id/earth"
-        android:layout_width="70dp"
-        android:layout_height="70dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="168dp"
+        android:layout_width="50dp"
+        android:layout_height="50dp"
+        android:layout_marginStart="44dp"
+        android:layout_marginTop="176dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:srcCompat="@drawable/cute_earth" />
@@ -79,27 +79,27 @@
         android:layout_marginBottom="8dp"
         android:background="@android:drawable/ic_media_play"
         android:onClick="propertyMove"
+        android:transitionName="BeginButton"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:transitionName="BeginButton"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <Button
         android:id="@+id/minus"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginStart="280dp"
-        android:layout_marginTop="96dp"
+        android:layout_marginTop="88dp"
+        android:layout_marginEnd="296dp"
         android:background="@drawable/minus"
         android:onClick="minus"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/plus"
         android:layout_width="30dp"
         android:layout_height="30dp"
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="300dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="296dp"
         android:background="@drawable/plus"
         android:onClick="plus"
         app:layout_constraintEnd_toEndOf="parent"
@@ -110,16 +110,25 @@
         android:layout_width="0dp"
         android:layout_height="40dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="96dp"
-        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"
         android:gravity="center"
         android:text="318"
         android:textColor="#CCFFFFFF"
         android:textSize="25dp"
-        app:layout_constraintEnd_toStartOf="@+id/plus"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toEndOf="@+id/minus"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintBottom_toTopOf="@+id/minus"
+        app:layout_constraintStart_toEndOf="@+id/jupiter"
+        app:layout_constraintTop_toBottomOf="@+id/plus" />
+
+    <ImageView
+        android:id="@+id/barrier_1"
+        android:layout_width="60dp"
+        android:layout_height="60dp"
+        android:layout_marginStart="336dp"
+        android:layout_marginTop="88dp"
+        app:layout_constraintStart_toStartOf="@+id/LayoutInStartGame"
+        app:layout_constraintTop_toBottomOf="@+id/jupiter"
+        app:srcCompat="@drawable/barrier_1" />
 
 
 </android.support.constraint.ConstraintLayout>
