--- a/app/src/main/res/layout/activity_choose.xml
+++ b/app/src/main/res/layout/activity_choose.xml
@@ -4,19 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/choosebackgrouna"
+    android:background="@drawable/chooseBackgroundPure"
     tools:context=".ChooseGameActivity">
-
-    <Button
-        android:id="@+id/Level1"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="33dp"
-        android:layout_height="27dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="20dp"
-        android:background="@android:color/transparent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/ReturnInChoose"
@@ -28,4 +17,157 @@
         android:background="@android:color/transparent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <android.support.v4.widget.NestedScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="371dp"
+        android:layout_height="302dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp"
+        android:background="@android:color/transparent"
+        android:fillViewport="true"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.818"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.678">
+
+        <android.support.constraint.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="8dp"
+            app:layout_constraintTop_toTopOf="parent">
+
+            <ImageView
+                android:id="@+id/Level3ViewLocked"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:layout_marginStart="156dp"
+                android:layout_marginTop="8dp"
+                android:layout_marginBottom="8dp"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintVertical_bias="0.246"
+                app:srcCompat="@drawable/chooselock" />
+
+            <ImageView
+                android:id="@+id/Level2ViewLocked"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:layout_marginStart="84dp"
+                android:layout_marginTop="28dp"
+                app:layout_constraintStart_toEndOf="@+id/Level3ViewLocked"
+                app:layout_constraintTop_toTopOf="parent"
+                app:srcCompat="@drawable/chooselock" />
+
+            <ImageView
+                android:id="@+id/imageView4"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:layout_marginTop="16dp"
+                android:layout_marginEnd="20dp"
+                app:layout_constraintEnd_toEndOf="@+id/Level2ViewLocked"
+                app:layout_constraintTop_toBottomOf="@+id/Level3ViewLocked"
+                app:srcCompat="@drawable/chooselock" />
+
+            <ImageView
+                android:id="@+id/imageView5"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:layout_marginStart="44dp"
+                android:layout_marginTop="48dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/Level3ViewLocked"
+                app:srcCompat="@drawable/chooselock" />
+
+            <ImageView
+                android:id="@+id/imageView6"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:layout_marginStart="52dp"
+                android:layout_marginTop="52dp"
+                app:layout_constraintStart_toEndOf="@+id/imageView5"
+                app:layout_constraintTop_toBottomOf="@+id/imageView4"
+                app:srcCompat="@drawable/chooselock" />
+
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:layout_marginStart="284dp"
+                android:layout_marginTop="16dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView6"
+                app:srcCompat="@drawable/chooselock" />
+
+            <ImageView
+                android:id="@+id/imageView8"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:layout_marginStart="76dp"
+                android:layout_marginTop="20dp"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/imageView7"
+                app:srcCompat="@drawable/chooselock" />
+
+            <ImageView
+                android:id="@+id/Level1ViewUnlocked"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginBottom="40dp"
+                app:layout_constraintBottom_toTopOf="@+id/Level3ViewLocked"
+                app:layout_constraintStart_toStartOf="parent"
+                app:srcCompat="@drawable/unlocked" />
+
+            <Button
+                android:id="@+id/Level1"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:layout_marginStart="24dp"
+                android:layout_marginTop="16dp"
+                android:background="@android:color/transparent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/Level2"
+                style="@style/Widget.AppCompat.Button.Borderless"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:textAlignment="center"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="@+id/Level2ViewLocked"
+                app:layout_constraintTop_toTopOf="@+id/Level2ViewLocked" />
+
+            <ImageView
+                android:id="@+id/Level2ViewUnlocked"
+                android:layout_width="52dp"
+                android:layout_height="52dp"
+                android:visibility="invisible"
+                app:layout_constraintEnd_toEndOf="@+id/Level2"
+                app:layout_constraintTop_toTopOf="@+id/Level2"
+                app:srcCompat="@drawable/unlocked" />
+        </android.support.constraint.ConstraintLayout>
+    </android.support.v4.widget.NestedScrollView>
+
+    <TextView
+        android:id="@+id/textView2"
+        android:layout_width="196dp"
+        android:layout_height="213dp"
+        android:layout_marginStart="32dp"
+        android:layout_marginTop="60dp"
+        android:background="@android:color/transparent"
+        android:fontFamily="@font/text_font"
+        android:text="@string/MessageInChoose"
+        android:textColor="@color/colorOfTextAlert"
+        android:textSize="18dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </android.support.constraint.ConstraintLayout>
