--- a/app/src/main/res/layout/dailogue.xml
+++ b/app/src/main/res/layout/dailogue.xml
@@ -4,28 +4,38 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/transparent">
+    android:background="@android:color/black">
 
     <ImageView
         android:id="@+id/imageView"
-        style="@style/Widget.AppCompat.Button.Borderless"
-        android:layout_width="655dp"
-        android:layout_height="370dp"
-        android:layout_marginStart="36dp"
-        android:layout_marginTop="52dp"
+        android:layout_width="725dp"
+        android:layout_height="419dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/alertdialogue" />
+        app:srcCompat="@drawable/alertdialoguesmall" />
 
     <TextView
         android:id="@+id/alertText"
-        android:layout_width="156dp"
-        android:layout_height="81dp"
-        android:layout_marginStart="212dp"
-        android:layout_marginTop="100dp"
+        android:layout_width="249dp"
+        android:layout_height="145dp"
+        android:layout_marginStart="164dp"
+        android:layout_marginTop="132dp"
         android:background="@color/colorOfAlert"
         android:textColor="@color/colorOfTextAlert"
-        android:textSize="14dp"
         app:layout_constraintStart_toStartOf="@+id/imageView"
-        app:layout_constraintTop_toTopOf="@+id/imageView" />
+        app:layout_constraintTop_toTopOf="parent" />
+
+    <Button
+        android:id="@+id/buttonInDialogue"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="52dp"
+        android:layout_marginEnd="124dp"
+        android:text="Continue"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 </android.support.constraint.ConstraintLayout>
