--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -46,4 +46,55 @@
         app:layout_constraintHorizontal_bias="0.501"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/ChooseGame" />
+
+    <ImageView
+        android:id="@+id/DialogueView"
+        android:layout_width="524dp"
+        android:layout_height="300dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="44dp"
+        android:alpha="0.65"
+        android:visibility="visible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:srcCompat="@drawable/alertdialoguesmall" />
+
+    <TextView
+        android:id="@+id/Text"
+        android:layout_width="181dp"
+        android:layout_height="117dp"
+        android:layout_marginStart="76dp"
+        android:layout_marginTop="88dp"
+        android:background="@color/colorOfAlert"
+        android:text="@string/LearnMoreMessage"
+        android:textColor="@color/colorOfTextAlert"
+        android:textSize="18sp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@+id/DialogueView"
+        app:layout_constraintTop_toTopOf="@+id/DialogueView" />
+
+    <ImageView
+        android:id="@+id/cancelView"
+        android:layout_width="33dp"
+        android:layout_height="33dp"
+        android:layout_marginStart="104dp"
+        android:layout_marginTop="36dp"
+        android:visibility="invisible"
+        app:layout_constraintStart_toEndOf="@+id/Text"
+        app:layout_constraintTop_toTopOf="@+id/DialogueView"
+        app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+
+    <Button
+        android:id="@+id/cancelInSeting"
+        style="@style/Widget.AppCompat.Button.Borderless"
+        android:layout_width="33dp"
+        android:layout_height="33dp"
+        android:background="@android:color/transparent"
+        android:visibility="invisible"
+        app:layout_constraintStart_toStartOf="@+id/cancelView"
+        app:layout_constraintTop_toTopOf="@+id/cancelView" />
+
 </android.support.constraint.ConstraintLayout>
