--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -66,13 +66,13 @@
         android:id="@+id/Text"
         android:layout_width="181dp"
         android:layout_height="117dp"
-        android:layout_marginStart="76dp"
-        android:layout_marginTop="88dp"
+        android:layout_marginStart="128dp"
+        android:layout_marginTop="80dp"
         android:background="@color/colorOfAlert"
         android:text="@string/LearnMoreMessage"
         android:textColor="@color/colorOfTextAlert"
         android:textSize="18sp"
-        android:visibility="invisible"
+        android:visibility="visible"
         app:layout_constraintStart_toStartOf="@+id/DialogueView"
         app:layout_constraintTop_toTopOf="@+id/DialogueView" />
 
@@ -80,10 +80,10 @@
         android:id="@+id/cancelView"
         android:layout_width="33dp"
         android:layout_height="33dp"
-        android:layout_marginStart="104dp"
-        android:layout_marginTop="36dp"
+        android:layout_marginTop="32dp"
+        android:layout_marginEnd="104dp"
         android:visibility="invisible"
-        app:layout_constraintStart_toEndOf="@+id/Text"
+        app:layout_constraintEnd_toEndOf="@+id/DialogueView"
         app:layout_constraintTop_toTopOf="@+id/DialogueView"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
