--- a/app/src/main/res/layout/startgame.xml
+++ b/app/src/main/res/layout/startgame.xml
@@ -7,25 +7,142 @@
     android:layout_height="match_parent"
     android:background="@drawable/gamebackgound">
 
-    <LinearLayout
-        android:id="@+id/LayoutInStartGame"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/congratulationView"
+        android:layout_width="715dp"
+        android:layout_height="395dp"
+        android:visibility="gone"
+        app:layout_constraintBottom_toTopOf="@+id/LayoutInStartGame"
+        app:layout_constraintEnd_toStartOf="@+id/LayoutInStartGame"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintVertical_bias="0.0">
 
-    </LinearLayout>
+        <Button
+            android:id="@+id/map"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="53dp"
+            android:layout_height="26dp"
+            android:layout_marginTop="36dp"
+            android:background="@color/colorOfAlert"
+            android:text="钻研地图"
+            android:textColor="@android:color/white"
+            android:textSize="12dp"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="@+id/nextLevel"
+            app:layout_constraintTop_toBottomOf="@+id/nextLevel" />
+
+        <Button
+            android:id="@+id/nextLevel"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="53dp"
+            android:layout_height="26dp"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="64dp"
+            android:background="@color/colorOfAlert"
+            android:text="继续旅程"
+            android:textColor="@android:color/white"
+            android:textSize="12dp"
+            app:layout_constraintEnd_toEndOf="@+id/imageView10"
+            app:layout_constraintTop_toTopOf="@+id/imageView10" />
+
+        <TextView
+            android:id="@+id/congratulation"
+            android:layout_width="151dp"
+            android:layout_height="60dp"
+            android:layout_marginEnd="144dp"
+            android:layout_marginBottom="120dp"
+            android:alpha="1"
+            android:background="@color/colorOfAlert"
+            android:text="@string/congratulationMessage"
+            android:textColor="@android:color/white"
+            android:textSize="19dp"
+            app:layout_constraintBottom_toBottomOf="@+id/imageView10"
+            app:layout_constraintEnd_toEndOf="@+id/imageView10" />
+
+        <ImageView
+            android:id="@+id/imageView10"
+            android:layout_width="369dp"
+            android:layout_height="260dp"
+            android:layout_marginBottom="68dp"
+            android:alpha="0.65"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.523"
+            app:layout_constraintStart_toStartOf="parent"
+            app:srcCompat="@drawable/alertdialoguesmall" />
+    </android.support.constraint.ConstraintLayout>
+
+    <LinearLayout
+        android:id="@+id/LayoutInStartGame"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:orientation="vertical"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/congratulationView"></LinearLayout>
+
+    <android.support.constraint.ConstraintLayout
+        android:id="@+id/dialogueView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:visibility="gone">
+
+        <ImageView
+            android:id="@+id/dialogue"
+            android:layout_width="429dp"
+            android:layout_height="314dp"
+            android:layout_marginStart="8dp"
+            android:layout_marginTop="64dp"
+            android:layout_marginEnd="8dp"
+            android:alpha="0.7"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            app:srcCompat="@drawable/alertdialoguesmall" />
+
+        <TextView
+            android:id="@+id/textView3"
+            android:layout_width="182dp"
+            android:layout_height="118dp"
+            android:layout_marginStart="76dp"
+            android:layout_marginTop="92dp"
+            android:background="@color/colorOfAlert"
+            android:text="@string/MessageWhenBoom"
+            android:textColor="@color/colorOfTextAlert"
+            android:textSize="19dp"
+            android:visibility="visible"
+            app:layout_constraintStart_toStartOf="@+id/dialogue"
+            app:layout_constraintTop_toTopOf="@+id/dialogue" />
+
+        <ImageView
+            android:id="@+id/cancelView"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:layout_marginTop="40dp"
+            android:layout_marginEnd="64dp"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="@+id/dialogue"
+            app:layout_constraintTop_toTopOf="@+id/dialogue"
+            app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
+
+        <Button
+            android:id="@+id/cancelButton"
+            style="@style/Widget.AppCompat.Button.Borderless"
+            android:layout_width="25dp"
+            android:layout_height="25dp"
+            android:background="@android:color/transparent"
+            android:visibility="visible"
+            app:layout_constraintEnd_toEndOf="@+id/cancelView"
+            app:layout_constraintTop_toTopOf="@+id/cancelView" />
+    </android.support.constraint.ConstraintLayout>
 
     <Button
         android:id="@+id/goback"
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:layout_marginStart="8dp"
+        android:layout_marginStart="16dp"
         android:layout_marginTop="8dp"
         android:background="@android:drawable/ic_menu_revert"
         app:layout_constraintStart_toStartOf="parent"
@@ -124,9 +241,9 @@
         android:id="@+id/barrier_1"
         android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_marginStart="336dp"
-        android:layout_marginTop="88dp"
-        app:layout_constraintStart_toStartOf="@+id/LayoutInStartGame"
+        android:layout_marginTop="108dp"
+        android:layout_marginEnd="336dp"
+        app:layout_constraintEnd_toEndOf="@+id/dialogueView"
         app:layout_constraintTop_toBottomOf="@+id/jupiter"
         app:srcCompat="@drawable/barrier_1" />
 
