--- a/app/src/main/res/layout/settings.xml
+++ b/app/src/main/res/layout/settings.xml
@@ -9,24 +9,37 @@
     <Button
         android:id="@+id/ChooseGame"
         android:layout_width="197dp"
-        android:layout_height="wrap_content"
+        android:layout_height="90dp"
         android:layout_marginStart="8dp"
-        android:layout_marginTop="132dp"
+        android:layout_marginTop="52dp"
         android:layout_marginEnd="8dp"
-        android:text="@string/ChooseGame"
+        android:background="@drawable/aboutus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <Button
-        android:id="@+id/ReturnInSetting"
+        android:id="@+id/LearnMore"
         android:layout_width="197dp"
-        android:layout_height="50dp"
+        android:layout_height="90dp"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp"
-        android:text="@string/Return"
+        android:background="@drawable/learnmore"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.501"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/ChooseGame" />
+
+    <Button
+        android:id="@+id/ReturnInSetting"
+        android:layout_width="197dp"
+        android:layout_height="80dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="68dp"
+        android:background="@drawable/back"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.503"
@@ -34,31 +47,18 @@
         app:layout_constraintTop_toBottomOf="@+id/LearnMore"
         app:layout_constraintVertical_bias="0.0" />
 
-    <Button
-        android:id="@+id/LearnMore"
-        android:layout_width="199dp"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:text="@string/LearnMore"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.501"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/ChooseGame" />
-
     <ImageView
         android:id="@+id/DialogueView"
         android:layout_width="524dp"
         android:layout_height="300dp"
         android:layout_marginStart="8dp"
         android:layout_marginEnd="8dp"
-        android:layout_marginBottom="44dp"
+        android:layout_marginBottom="40dp"
         android:alpha="0.65"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintHorizontal_bias="0.413"
         app:layout_constraintStart_toStartOf="parent"
         app:srcCompat="@drawable/alertdialoguesmall" />
 
@@ -72,7 +72,7 @@
         android:text="@string/LearnMoreMessage"
         android:textColor="@color/colorOfTextAlert"
         android:textSize="18sp"
-        android:visibility="visible"
+        android:visibility="invisible"
         app:layout_constraintStart_toStartOf="@+id/DialogueView"
         app:layout_constraintTop_toTopOf="@+id/DialogueView" />
 
@@ -80,10 +80,10 @@
         android:id="@+id/cancelView"
         android:layout_width="33dp"
         android:layout_height="33dp"
-        android:layout_marginTop="32dp"
-        android:layout_marginEnd="104dp"
+        android:layout_marginStart="400dp"
+        android:layout_marginTop="8dp"
         android:visibility="invisible"
-        app:layout_constraintEnd_toEndOf="@+id/DialogueView"
+        app:layout_constraintStart_toStartOf="@+id/DialogueView"
         app:layout_constraintTop_toTopOf="@+id/DialogueView"
         app:srcCompat="@android:drawable/ic_menu_close_clear_cancel" />
 
